Pre cog update (#1)
* Regardless of capitalization

* kudos setattrib

* response

* Marriage testing

* Time #2

* This should work tho

* debug code help me

* I'm an absolute knob

* Add reactions to message after it's sent

* Awaiting things is fun

* Fix reaction adding *sortof*

* Confirm message

* remove return temporarily

* ??????

* remove end msg

* One step at a time

* One step at a time :cirSlain:

* Perfect!

* Deny marrying the bot

* whoops

* whoops i inverted those

* Fun commands, commence!

* await sent ffs

* Fun commands done :rooHappy:

* rate format

* Allow non-mentions

* Fix formatting

* More 8ball responses

* Mention in fun commands

* Mentions #2

* Debug rescue

* Test again :woweehop:

* bot addition

* mention test

* Fix other commands

* Mobile User Count in Stats

* Begin server options cog

* Typo

* Extras in options

* test fix for duplicate members

* swap to strings just because

* i'm dumb lol

* break not return

* mobile addition to user

* Formatting

* Formatting 2

* Excess leftovers

* Use client instead

* there's a better way to do this, I'll figure it out later though.

* typo

* two typos

* this is actually a better way now that i think about it

* fix str requirement

* that'd be doing it

* That's perfect.

* Ensure cogloader stays loaded

* oh lord the next step is gonna be to revamp EVERYTHING

* option list

* joke pay command

* change formatting

* Formatting

* debug user eval

* cirSlain I missed a comma

* redefine

* Member

* remove else

* This is a much better method

* whoops

* string it

* str2

* That would be the issue

* testing wowee

* Debug test thing

* Fix

* flip

* Force it to be an int

* Typo and fix

* smug points

* smug2

* smug3

* smug4

* smug5

* random in manbot

* smug 6?

* smug 7, this is it

* Basic emot

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 __pycache__/
 *.pyc
-data/*
 config/config.py
 config/config.ini
 config/emotes.py
+.vscode/
+mods/testmods/
+data/
+mods/memberEvents.py
+mods/manbot.py
+mods/info.py
+mods/info.py
+*.py
