--- a/config/config.example.ini
+++ b/config/config.example.ini
@@ -12,15 +12,8 @@ Status = with Aleana!
 # Sets the status to Playing (0), Listening (2), or Watching (3).
 Activity = 0
 
-[Extras]
-# Your id for goes here, you can find it by enablind developer mode in Discord, right clicking,
-# and clicking Copy ID.
-Owner = 
+# Allows access to the Osu API for Osu commands.
+OsuAPI = 
 
-# Channel for the Log command.
-# Channel IDs can be found the same way as your Owner ID.
-LogChannel = 
-
-# This is to be an audio stream, any url that goes here will be played when using the play command in the voice module.
-# If unspecified, the default http://aleana.mynetgear.com/stream will be used instead
-Stream = 
+# This is the API key for Push Bullet integration.
+PushBulletToken = 
